Scaleform fully optional now

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -42,7 +42,9 @@ endif()
 if( DEDICATED )
     add_definitions(-DDEDICATED -DSWDS -DNO_BINK)
 else()
-    add_definitions(-DINCLUDE_SCALEFORM)
+    if( USE_SCALEFORM )
+        add_definitions(-DINCLUDE_SCALEFORM)
+    endif()
 endif()
 remove_definitions(-DBASE) #used by cryptopp REEE
 add_definitions(-DALLOW_TEXT_MODE=1)
