--- a/game/client/CMakeLists.txt
+++ b/game/client/CMakeLists.txt
@@ -13,7 +13,10 @@ set(GAMENAME "csgo")
 set(CSGO "1")
 #set(DONT_DOWNGRADE_ABI "1")
 
-add_definitions(-DCSTRIKE_CLIENT_DLL -DCSTRIKE_DLL -DGAMEUI_EMBEDDED -DGAMEUI_EXPORTS -DVERSION_SAFE_STEAM_API_INTERFACES -DINCLUDE_SCALEFORM -DUSE_ECONOMY_FEATURES)
+add_definitions(-DCSTRIKE_CLIENT_DLL -DCSTRIKE_DLL -DGAMEUI_EMBEDDED -DGAMEUI_EXPORTS -DVERSION_SAFE_STEAM_API_INTERFACES -DUSE_ECONOMY_FEATURES)
+if( USE_SCALEFORM )
+    add_definitions(-DINCLUDE_SCALEFORM)
+endif()
 add_definitions(-DALLOW_TEXT_MODE=1)
 
 include( ./client_base.cmake )
@@ -276,53 +279,55 @@ target_sources(${OUTBINNAME} PRIVATE "${SRCDIR}/game/shared/cstrike15/gametypes.
     #}
 #}
 
-#$Folder "scaleform"
-#{
-    #$Folder "HUD Elements"
+if( USE_SCALEFORM )
+    #$Folder "scaleform"
     #{
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_autodisconnect.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_chat.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudradar.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_radio.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_rosettaselector.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudmoney.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudreticle.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudweaponpanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_uniquealerts.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudhealtharmorpanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_deathnotice.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_teamcounter.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudinfopanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhuddamageindicator.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfweaponselection.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudwinpanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudfreezepanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudtrialtimer.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudvotepanel.cpp")
-        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudcallvotepanel.cpp")
-    #}
+        #$Folder "HUD Elements"
+        #{
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_autodisconnect.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_chat.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudradar.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_radio.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_rosettaselector.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudmoney.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudreticle.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudweaponpanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_uniquealerts.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudhealtharmorpanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_deathnotice.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhud_teamcounter.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudinfopanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhuddamageindicator.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfweaponselection.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudwinpanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudfreezepanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudtrialtimer.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudvotepanel.cpp")
+            target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/HUD/sfhudcallvotepanel.cpp")
+        #}
 
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createmainmenuscreen_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/html_base_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/html_control_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/blog_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createstartscreen_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createlegalanim_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/teammenu_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/motion_calibration_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/messagebox_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/overwatchresolution_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/mapoverview.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_video_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_audio_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/upsell_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/howtoplaydialog_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/medalstatsdialog_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/leaderboardsdialog_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/loadingscreen_scaleform.cpp")
-    target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/splitscreensignon.cpp")
-#}
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createmainmenuscreen_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/html_base_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/html_control_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/blog_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createstartscreen_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/createlegalanim_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/teammenu_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/motion_calibration_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/messagebox_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/overwatchresolution_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/mapoverview.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_video_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_audio_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/options_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/upsell_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/howtoplaydialog_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/medalstatsdialog_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/leaderboardsdialog_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/loadingscreen_scaleform.cpp")
+        target_sources(${OUTBINNAME} PRIVATE "cstrike15/Scaleform/splitscreensignon.cpp")
+    #}
+endif()
 
 #$Folder	"vgui"
 #{
