--- a/materialsystem/CMakeLists.txt
+++ b/materialsystem/CMakeLists.txt
@@ -18,7 +18,10 @@ set(SHADERAPIDX9DIR "shaderapidx9")
 set(SHADERLIBDIR "shaderlib")
 set(STDSHADERSDIR "stdshaders")
 
-add_definitions(-DDEFINE_MATERIALSYSTEM_INTERFACE -DMATERIALSYSTEM_EXPORTS -DPROTECTED_THINGS_ENABLE -DINCLUDE_SCALEFORM)
+add_definitions(-DDEFINE_MATERIALSYSTEM_INTERFACE -DMATERIALSYSTEM_EXPORTS -DPROTECTED_THINGS_ENABLE)
+if( USE_SCALEFORM )
+    add_definitions(-DINCLUDE_SCALEFORM)
+endif()
 add_definitions(-DVERSION_SAFE_STEAM_API_INTERFACES)
 
 if( GL )
