Use System SDL on linux

--- a/appframework/CMakeLists.txt
+++ b/appframework/CMakeLists.txt
@@ -28,7 +28,13 @@ if( CSTRIKE_TRUNK_BUILD OR CSTRIKE_STAGING_BUILD )
 endif()
 
 #Sources
-include_directories(${SRCDIR}/thirdparty/SDL2)
+if( LINUXALL )
+    #Use system SDL2 for linux
+    include_directories("/usr/include/SDL2")
+else()
+    include_directories(${SRCDIR}/thirdparty/SDL2)
+endif()
+
 target_sources(${OUTLIBNAME} PRIVATE "${AF_SRCDIR}/AppSystemGroup.cpp")
 target_sources(${OUTLIBNAME} PRIVATE "${SRCDIR}/public/filesystem_init.cpp")
 if( WINDOWS )
