--- a/game/client/CMakeLists.txt
+++ b/game/client/CMakeLists.txt
@@ -368,5 +368,5 @@ target_link_libraries(${OUTBINNAME} matsys_controls_client)
 target_link_libraries(${OUTBINNAME} ${LIBPUBLIC}/libsteam_api.so) #proprietary steam api
 target_link_libraries(${OUTBINNAME} ${LIBPUBLIC}/gcsdk_client.a) #evil game coordinator voodoo
 target_link_libraries(${OUTBINNAME} tier2_client tier3_client vgui_controls_client vtf_client bzip2_client libvstdlib_client dmxloader_client bitmap_client mathlib_client tier2_client )
-target_link_libraries(${OUTBINNAME} protobuf )
+#target_link_libraries(${OUTBINNAME} protobuf )
 
