-fPIC --> -fpic. Add -fno-semantic-interposition

--- a/appframework/CMakeLists.txt
+++ b/appframework/CMakeLists.txt
@@ -20,7 +20,6 @@ if( NOT IS_LIB_PROJECT AND GL )
 endif()
 
 if( (WINDOWS AND GL) OR LINUXALL )
-    target_compile_options(${OUTLIBNAME} PRIVATE -fPIC)
     add_definitions(-DVERSION_SAFE_STEAM_API_INTERFACES -DDX_TO_GL_ABSTRACTION)
 endif()
 if( CSTRIKE_TRUNK_BUILD OR CSTRIKE_STAGING_BUILD )
@@ -31,6 +30,7 @@ endif()
 if( LINUXALL )
     #Use system SDL2 for linux
     include_directories("/usr/include/SDL2")
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
 else()
     include_directories(${SRCDIR}/thirdparty/SDL2)
 endif()
