--- a/tier1/CMakeLists.txt
+++ b/tier1/CMakeLists.txt
@@ -20,7 +20,7 @@ if( WINDOWS )
 endif()
 
 if( LINUXALL )
-    target_compile_options(${OUTLIBNAME} PRIVATE "-fPIC")
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
 endif()
 
 #Sources
