--- a/vstdlib/CMakeLists.txt
+++ b/vstdlib/CMakeLists.txt
@@ -11,7 +11,7 @@ include(${CMAKE_MODULE_PATH}/source_dll_base.cmake)
 add_definitions(-DVSTDLIB_DLL_EXPORT)
 
 if( LINUXALL )
-    target_compile_options(${OUTBINNAME} PRIVATE -U_FORTIFY_SOURCE -fno-stack-protector -fPIC)
+    target_compile_options(${OUTBINNAME} PRIVATE -U_FORTIFY_SOURCE -fno-stack-protector -fpic -fno-semantic-interposition)
 endif()
 
 target_sources(${OUTBINNAME} PRIVATE "concommandhash.h")
