--- a/bonesetup/CMakeLists.txt
+++ b/bonesetup/CMakeLists.txt
@@ -15,7 +15,7 @@ include(${CMAKE_MODULE_PATH}/source_lib_base.cmake)
 include_directories(../public)
 
 if( LINUXALL )
-    target_compile_options(${OUTLIBNAME} PRIVATE -fPIC)
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
 endif()
 
 target_sources(${OUTLIBNAME} PRIVATE "bone_setup.cpp")
