--- a/dmxloader/CMakeLists.txt
+++ b/dmxloader/CMakeLists.txt
@@ -15,7 +15,7 @@ include(${CMAKE_MODULE_PATH}/source_lib_base.cmake)
 add_definitions(-DDMXLOADER_LIB)
 
 if( LINUXALL )
-    target_compile_options(${OUTLIBNAME} PRIVATE -fPIC)
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
 endif()
 
 target_sources(${OUTLIBNAME} PRIVATE "dmxattribute.cpp")
