--- a/materialsystem/shaderlib/CMakeLists.txt
+++ b/materialsystem/shaderlib/CMakeLists.txt
@@ -14,7 +14,9 @@ set(OUTLIBNAME "shaderlib_client")
 include(${CMAKE_MODULE_PATH}/detect_platform.cmake)
 include(${CMAKE_MODULE_PATH}/source_lib_base.cmake)
 
-target_compile_options(${OUTLIBNAME} PRIVATE "-fPIC")
+if( LINUXALL )
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
+endif()
 
 include_directories(../)
 add_definitions(-DFAST_MATERIALVAR_ACCESS)
