--- a/vpklib/CMakeLists.txt
+++ b/vpklib/CMakeLists.txt
@@ -10,6 +10,8 @@ set(OUTLIBNAME "vpklib_client")
 include(${CMAKE_MODULE_PATH}/detect_platform.cmake)
 include(${CMAKE_MODULE_PATH}/source_lib_base.cmake)
 
-target_compile_options(${OUTLIBNAME} PRIVATE -fPIC)
+if( LINUXALL )
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition)
+endif()
 
 target_sources(${OUTLIBNAME} PRIVATE "packedstore.cpp")
