--- a/ivp/ivp_compact_builder/CMakeLists.txt
+++ b/ivp/ivp_compact_builder/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories(${SRCDIR}/ivp/ivp_collision)
 include_directories(${SRCDIR}/ivp/ivp_surface_manager)
 
 if( LINUXALL )
-    target_compile_options(${OUTLIBNAME} PRIVATE -fpermissive -fpic -fno-semantic-interposition)
+    target_compile_options(${OUTLIBNAME} PRIVATE -fpic -fno-semantic-interposition -fpermissive)
     #TODO: pretty sure the valve guy made a typo here, it's supposed to be MAVOK_MOPP
     add_definitions(-D_LIB -DIVP_VERSION_SDK -DHAVOK_MOOP -DLINUX)
 endif()
