--- a/ivp/havana/havok/hk_physics/constraint/CMakeLists.txt
+++ b/ivp/havana/havok/hk_physics/constraint/CMakeLists.txt
@@ -25,9 +25,9 @@ target_sources(${OUTLIBNAME} PRIVATE constraint.cpp)
 target_sources(${OUTLIBNAME} PRIVATE ball_socket/ball_socket_constraint.cpp)
 target_sources(${OUTLIBNAME} PRIVATE limited_ball_socket/limited_ball_socket_constraint.cpp)
 
-#TODO: These files Need O1! otherwise the ragdolls will spasm and fly around.
+#TODO: This file Need O1! otherwise the ragdolls will spasm and fly around.
 target_sources(${OUTLIBNAME} PRIVATE ragdoll/ragdoll_constraint.cpp)
-set_source_files_properties(ragdoll/ragdoll_constraint.cpp PROPERTIES COMPILE_FLAGS -O1)
+
 target_sources(${OUTLIBNAME} PRIVATE ragdoll/ragdoll_constraint_bp_builder.cpp)
 set_source_files_properties(ragdoll/ragdoll_constraint_bp_builder.cpp PROPERTIES COMPILE_FLAGS -O1)
 
