--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -43,5 +43,5 @@ target_sources(${OUTBINNAME} PRIVATE "reslistgenerator.cpp")
 target_link_libraries(${OUTBINNAME} appframework_client tier1_client tier2_client tier3_client interfaces_client )
 target_link_libraries(${OUTBINNAME} ${LIBPUBLIC}/libsteam_api.so) # Link to proprietary steamapi
 if( NOT IS_LIB_PROJECT AND GL )
-    target_link_libraries(${OUTBINNAME} ${LIBPUBLIC}/libtogl_client.so) # Link to precompiled togl
+    target_link_libraries(${OUTBINNAME} libtogl_client) # Link to precompiled togl
 endif()
