more physics fixes. train/militia will load now.

--- a/ivp/ivp_physics/CMakeLists.txt
+++ b/ivp/ivp_physics/CMakeLists.txt
@@ -34,11 +34,17 @@ target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_collision_filter.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_compact_ledge.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_compact_ledge_solver.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_i_collision_vhash.cxx)
+set_source_files_properties(../ivp_collision/ivp_i_collision_vhash.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist.cxx)
+set_source_files_properties(../ivp_collision/ivp_mindist.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist_debug.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist_event.cxx)
+set_source_files_properties(../ivp_collision/ivp_mindist_event.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist_mcases.cxx)
+set_source_files_properties(../ivp_collision/ivp_mindist_mcases.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist_minimize.cxx)
+set_source_files_properties(../ivp_collision/ivp_mindist_minimize.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
+
 #TODO: This file needs -O0 or it will start skipping if statements WTF!!!
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_collision/ivp_mindist_recursive.cxx)
 set_source_files_properties(../ivp_collision/ivp_mindist_recursive.cxx PROPERTIES COMPILE_FLAGS -O0)
@@ -74,8 +80,10 @@ target_sources(${OUTLIBNAME} PRIVATE ../ivp_intern/ivp_time.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_active_value.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_bigvector.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_geometry.cxx)
+set_source_files_properties(../ivp_utility/ivu_geometry.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_hash.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_linear.cxx)
+set_source_files_properties(../ivp_utility/ivu_linear.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_mapping.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_memory.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_utility/ivu_min_hash.cxx)
@@ -91,6 +99,7 @@ target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_anomaly_manager.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_betterdebugmanager.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_betterstatisticsmanager.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_cache_object.cxx)
+set_source_files_properties(../ivp_physics/ivp_cache_object.cxx PROPERTIES COMPILE_FLAGS -O0) #Related to get_cache_object - Will crash without this :))
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_liquid_surface_descript.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_material.cxx)
 target_sources(${OUTLIBNAME} PRIVATE ../ivp_physics/ivp_performancecounter.cxx)
