some cmake cleanup

--- a/avi/CMakeLists.txt
+++ b/avi/CMakeLists.txt
@@ -61,6 +61,7 @@ endif()
 if( WINDOWS OR X360 OR POSIX )
     target_link_libraries(${OUTBINNAME} tier2_client tier3_client)
     if( LINUXALL )
-        target_link_libraries(${OUTBINNAME} ${SRCDIR}/lib/common/libSDL2_mixer.a)
+        #target_link_libraries(${OUTBINNAME} ${SRCDIR}/lib/common/libSDL2_mixer.a)
+        target_link_libraries(${OUTBINNAME} SDL2_mixer)
     endif()
 endif()
